--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="/static/css/styles.css" />
+
   <title>{% block title %} {% endblock %}</title>
 </head>
 
@@ -26,7 +28,6 @@
           <a class="nav-link" href="#">About</a>
         </li>
       </ul>
-      <a class="btn btn-primary ml-auto" href="{{ url_for('cart') }}">Cart</a>
     </div>
   </nav>
   <div class="container">
