--- a/templates/base.html
+++ b/templates/base.html
@@ -25,14 +25,23 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="/about">About</a>
         </li>
       </ul>
     </div>
   </nav>
-  <div class="container">
+  <div class="container main">
     {% block content %} {% endblock %}
   </div>
+  <footer class="py-3 my-4 bg-light">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
+      <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Products</a></li>
+      <li class="nav-item"><a href="/cart" class="nav-link px-2 text-body-secondary">Cart</a></li>
+      <li class="nav-item"><a href="/about" class="nav-link px-2 text-body-secondary">About</a></li>
+    </ul>
+    <p class="text-center text-body-secondary">© 2023 Company, Inc</p>
+  </footer>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
